--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@
     <hr />
     <a href="./public/about/about.html">About Us</a>
     <a href="./public/contact/contact.html">Comtact us</a>
+    <a href="https://logeshkannan-hub123.github.io/MyResume/">My Resume</a>
   </body>
 </html>
+
