--- a/index.html
+++ b/index.html
@@ -4,32 +4,81 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>portfolio</title>
+    <link rel="stylesheet" href="./css/port.css" />
   </head>
   <body>
-    <h1>Logesh Kannan's Portfolio</h1>
-    <h2>I'm a Full Stack Developer</h2>
+    <div class="header">
+      <img
+        src="./assets/images/IMG-20231026-WA0003.jpg"
+        alt="Logesh Kannan"
+        class="my-image"
+        width="100px"
+      />
+      <h1>Logesh Kannan's Portfolio</h1>
+      <h2 class="h2">I'm a Full Stack Developer</h2>
+    </div>
     <hr />
+
     <h2>My projects</h2>
-    <a href="./public/myproject/movies/movies.html">
-      <h3>Movie Range Project attach image in bottom</h3>
-      <img
-        src="./assets/images/Screenshot 2025-10-06 105421.png"
-        alt="Movie range"
-        height="400"
-      />
-    </a>
-    <a href="./public/myproject/movies/birthday_invitation.html">
-      <h3>Birthday party Invitaion card project attach image in bottom</h3>
-      <img
-        src="./assets/images/Screenshot 2025-10-06 105432.png"
-        alt="Birthday party"
-        height="400"
-      />
-    </a>
+    <div class="project">
+      <div class="div1 card">
+        <a href="./public/myproject/movies/movies.html">
+          <h3>Movie Range Project attach image in bottom</h3>
+          <img
+            src="./assets/images/Screenshot 2025-10-06 105421.png"
+            alt="Movie range"
+            class="image"
+            height="400"
+          />
+        </a>
+      </div>
+      <div class="div2 card">
+        <a href="./public/myproject/movies/birthday_invitation.html">
+          <h3>Birthday party Invitaion card project attach image in bottom</h3>
+          <img
+            src="./assets/images/Screenshot 2025-10-06 105432.png"
+            alt="Birthday party"
+            class="image"
+            height="400"
+          />
+        </a>
+      </div>
+      <div class="div3 card">
+        <a href="../../Classes/20250927/4.1+Webpages-hw/index.html">
+          <h3>Add an image of yourself that links to the about page</h3>
+          <img
+            src="./assets/images/Screenshot 2025-11-01 112155.png"
+            alt="click image and show about page"
+            class="image"
+            height="400"
+          />
+        </a>
+      </div>
+      <div class="div4 card">
+        <a href="../../Classes/20251027/designagency/index.html">
+          <h3>Logesh Kannan's Creative Design Agency</h3>
+          <img
+            src="./assets/images/Screenshot 2025-11-01 112619.png"
+            alt="Design Agency"
+            class="image"
+            width="489"
+            height="400"
+          />
+        </a>
+      </div>
+    </div>
     <hr />
-    <a href="./public/about/about.html">About Us</a>
-    <a href="./public/contact/contact.html">Comtact us</a>
-    <a href="https://logeshkannan-hub123.github.io/MyResume/">My Resume</a>
+    <h2>More details about me</h2>
+    <ul>
+      <li><a href="./public/about/about.html">About Us</a></li>
+      <li><a href="./public/contact/contact.html">Contact us</a></li>
+      <li>
+        <a href="https://logeshkannan-hub123.github.io/MyResume/">My Resume</a>
+      </li>
+    </ul>
+    <hr />
+    <footer>
+      <p>&copy; 2025 Logesh Kannan. All rights reserved.</p>
+    </footer>
   </body>
 </html>
-
