--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </a>
       </div>
       <div class="div3 card">
-        <a href="../../Classes/20250927/4.1+Webpages-hw/index.html">
+        <a href="./public/myproject/movies/AddImage.html">
           <h3>Add an image of yourself that links to the about page</h3>
           <img
             src="./assets/images/Screenshot 2025-11-01 112155.png"
@@ -55,7 +55,7 @@
         </a>
       </div>
       <div class="div4 card">
-        <a href="../../Classes/20251027/designagency/index.html">
+        <a href="./public/myproject/movies/DesignAgency.html">
           <h3>Logesh Kannan's Creative Design Agency</h3>
           <img
             src="./assets/images/Screenshot 2025-11-01 112619.png"
