--- a/public/myproject/movies/4.1+Webpages-hw/index.html
+++ b/public/myproject/movies/4.1+Webpages-hw/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Website</title>
+    <style>
+      @media (max-width: 490px) {
+        img {
+          width: 100%;
+        }
+      }
+    </style>
   </head>
   <body>
     <h1>Welcome to My Website!</h1>
