Refine project descriptions and fix typos
Updated project descriptions and fixed minor typos.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
       <div class="div2 card">
         <a href="./public/myproject/movies/birthday_invitation.html">
-          <h3>Birthday party Invitaion card project attach image in bottom</h3>
+          <h3>Birthday party Invitaion card</h3>
           <img
             src="./assets/images/Screenshot 2025-10-06 105432.png"
             alt="Birthday party"
@@ -45,7 +45,7 @@
       </div>
       <div class="div3 card">
         <a href="./public/myproject/movies/4.1+Webpages-hw/index.html">
-          <h3>Add an image of yourself that links to the about page</h3>
+          <h3>click image links to the about page</h3>
           <img
             src="./assets/images/Screenshot 2025-11-01 112155.png"
             alt="click image and show about page"
