--- a/public/about/about.html
+++ b/public/about/about.html
@@ -4,6 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Me</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 20px;
+        padding: 20px;
+        background-color: rgb(139, 154, 170);
+      }
+      h1 {
+        color: #111;
+      }
+      h2 {
+        color: #333;
+      }
+      p {
+        line-height: 1.6;
+        font-size: larger;
+        color: #4d3d3d;
+      }
+    </style>
   </head>
   <body>
     <h1>About Me</h1>
