Enhance portfolio with certifications and project updates
Added a new section for certifications and updated project descriptions.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="project">
       <div class="div1 card">
         <a href="./public/myproject/movies/movies.html">
-          <h3>Movie Range Project attach image in bottom</h3>
+          <h3>Movie Range Project</h3>
           <img
             src="./assets/images/Screenshot 2025-10-06 105421.png"
             alt="Movie range"
@@ -56,13 +56,76 @@
       </div>
       <div class="div4 card">
         <a href="./public/myproject/movies/designagency/index.html">
-          <h3>Logesh Kannan's Creative Design Agency</h3>
+          <h3>Creative Design Agency</h3>
           <img
             src="./assets/images/Screenshot 2025-11-01 112619.png"
             alt="Design Agency"
             class="image"
-            width="489"
             height="400"
+          />
+        </a>
+      </div>
+    </div>
+    <hr />
+    <h2>Certifications</h2>
+    <div class="certification">
+      <div class="cert1 card">
+        <a href="./assets/images/IMG_wpAPI.jpg">
+          <h3>WhatsApp API Chatbot</h3>
+          <img
+            src="./assets/images/IMG_wpAPI.jpg"
+            alt="WhatsApp API Based Chatbot Workshop"
+            class="cert1_image"
+          />
+        </a>
+      </div>
+      <div class="cert2 card">
+        <a href="./assets/images/IMG_heartfull.jpg">
+          <h3>International youth seminar</h3>
+          <img
+            src="./assets/images/IMG_heartfull.jpg"
+            alt="International youth seminar on Heartfulness"
+            class="cert1_image"
+          />
+        </a>
+      </div>
+      <div class="cert3 card">
+        <a href="./assets/images/project_publish_certificate.png">
+          <h3>Project published Certificate</h3>
+          <img
+            src="./assets/images/project_publish_certificate.png"
+            alt="Project published Certificate"
+            class="cert1_image"
+          />
+        </a>
+      </div>
+      <div class="cert4 card">
+        <a href="./assets/images/travel_and_management.jpg">
+          <h3>Travel and Management</h3>
+          <img
+            src="./assets/images/travel_and_management.jpg"
+            alt="Travel and Management"
+            class="cert1_image"
+          />
+        </a>
+      </div>
+      <div class="cert5 card">
+        <a href="./assets/images/YoungProfessional.jpg">
+          <h3>TCS Career Edgel</h3>
+          <img
+            src="./assets/images/YoungProfessional.jpg"
+            alt="TCS ION Career Edge-Young Professional"
+            class="cert1_image"
+          />
+        </a>
+      </div>
+      <div class="cert6 card">
+        <a href="./assets/images/India@75Quiz.jpg">
+          <h3>India @75 Quiz Contest</h3>
+          <img
+            src="./assets/images/India@75Quiz.jpg"
+            alt="India @75 Quiz Contest"
+            class="cert1_image"
           />
         </a>
       </div>
