Fix HTML formatting and add new project links

--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
           />
         </a>
       </div>
+      <div class="div5 card">
+        <a href="https://logeshkannan-hub123.github.io/Restaurant-Menu-Page/">
+          <h3>Restaurant Menu Page</h3>
+          <img
+            src="./assets/images/resturent.png"
+            alt="Design Agency"
+            class="image"
+            height="400"
+          />
+        </a>
+      </div>
     </div>
     <hr />
     <h2>Certifications</h2>
