Update index.html with new project links and sections
Added a new project section and updated existing project links.

--- a/index.html
+++ b/index.html
@@ -76,6 +76,17 @@
           />
         </a>
       </div>
+      <div class="div6 card">
+        <a href="https://logeshkannan-hub123.github.io/Simple-web-site/">
+          <h3>Sample Webpage</h3>
+          <img
+            src="./assets/images/sample_website.png"
+            alt="sample_website"
+            class="image"
+            height="400"
+          />
+        </a>
+      </div>
     </div>
     <hr />
     <h2>Certifications</h2>
